# glsl-pack

./: README.md
glsl-lang/lang/: Cargo.toml
glsl-lang/lang-quote/src/: tokenize.rs
glsl-lang/lang-util/: Cargo.toml
glsl-lang/lang/src/: ast.rs  lexer.rs  lib.rs  parser.lalrpop
glsl-lang/lang/src/lexer/: token.rs
glsl-lang/lang/src/parse/: context.rs
glsl-lang/lang/src/transpiler/: glsl.rs
glsl-pack-rtbase/: Cargo.toml
glsl-pack-rtbase/src/: lib.rs  rt_shaders.rs  shader.rs
glsl-pkg/: Cargo.toml
glsl-pkg/src/: backends.json  backends.rs  buildin_sym.rs  errors.rs  lib.rs  package.rs  pkg_inst.rs  pkg_mgr.rs  shader.rs
glsl-pkg/src/ast/: ast_file.rs  ast_package.rs  errors.rs  lex_string.rs  mod.rs  scan_define.rs  scan_use.rs
glsl-pkg/src/compiler/: backend.rs  combinadics.rs  compile_env.rs  compiler.rs  dag.rs  dep_search.rs  dep_search_gen.rs  mod.rs  shader_compiler.rs  sym_generator.rs
glsl-pkg/src/compiler/steps/: fs_dep_main_step.rs  mod.rs  shader_trait_step.rs  vertex_layout_step.rs  vs_dep_main_step.rs
tests/: testOut.frag  testOut.glsl  testOut.vert
tests/core/: color.glsl  math.glsl  package.json  testOut.glsl
tests/core/.output/: color.vs
tests/output/: color_+YvD8uV0eoQ=.frag  color_+YvD8uV0eoQ=.vert
text-macro/: .gitignore  Cargo.toml  README.md
text-macro/src/: context.rs  errors.rs  file.rs  lib.rs  value.rs
text-macro/tests/: a.c  b.c
