[package]
name = "glsl-pkg"
version = "0.1.0"
edition = "2018"


[dependencies]
env_logger = "0.8.4"
walkdir = "2.3.2"
log = "0.4.14"
anyhow = "1.0.41"
thiserror = "1.0.25"
base64 = "0.13.0"
serde_json = "1.0.64"
text-macro = { path = "../text-macro" }
lang-util = { path = "../glsl-lang/lang-util" }
glsl-lang = { path = "../glsl-lang/lang" }