[package]
name = "glsl-pkg"
version = "0.1.0"
edition = "2018"


[dependencies]
env_logger = "0.8.4"
walkdir = "2.3.2"
log = "0.4.14"
anyhow = "1.0.41"
thiserror = "1.0.25"

serde_json = "1.0.64"
text-macro = { path = "../text-macro" }
lang-util = { path = "../glsl-lang/lang-util" }
glsl-lang = { path = "../glsl-lang/lang" }
glsl-pack-rtbase = {path = "../glsl-pack-rtbase" }
smol_str = "*"
shaderc = "0.8.0"
serde = "1.0.136"
serde_derive = "1.0.136"
lazy_static = "1.4.0"